[package]
name = "tvm-build"
version = "0.2.4"
authors = ["Jared Roesch <jroesch@octoml.ai>"]
edition = "2018"
description = "A CLI and library for programmatically building TVM."
license = "Apache-2.0"
homepage = "https://tvm.ai"
repository = "https://github.com/octoml/tvm-build"

[dependencies]
git2 = "0.14.2"
thiserror = "1.0"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.2"
cmake = "0.1.44"
dirs = "3.0.1"
structopt = "0.3"
anyhow = "1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
